--- a/recipes/r-sartools/1.2.0/meta.yaml
+++ b/recipes/r-sartools/1.2.0/meta.yaml
@@ -19,12 +19,14 @@ build:
 # Suggests: parallel
 requirements:
   build:
+    - libjpeg
     - r
     - r-knitr
     - bioconductor-deseq2
     - bioconductor-edger
 
   run:
+    - libjpeg
     - r
     - r-knitr
     - bioconductor-deseq2
